--- a/media/fluencytest.css
+++ b/media/fluencytest.css
@@ -5,12 +5,28 @@
 body {
     margin: 0px 0px 0px 0px;
     padding: 0px 0px 0px 0px;
+    font-family: sans-serif;
 }
 
 ul {
     list-style: none;
     margin: 0px 0px 0px 0px;
     padding: 0px 0px 0px 0px;
+}
+
+label {
+    display: block;
+    width: 195px;
+    margin: 0px 0px 10px 0px;
+}
+input, 
+select {
+    display: block;
+    margin: 0px 0px 10px 40px;
+}
+
+input[type=text] {
+    width: 300px;
 }
 
 #container {
@@ -20,4 +36,9 @@ ul {
     margin: 0px auto 0px auto;
     background: firebrick;
     min-height: 100px;
+}
+
+#quote_form {
+    width: 400px;
+    margin: 20px auto 20px auto;
 }
